--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Wind Breaker Season 1</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
@@ -14,44 +14,56 @@
       padding: 0;
       overflow-x: hidden;
     }
+
     html, body {
       user-select: none;
       scroll-behavior: smooth;
     }
+
     .video-container {
       position: relative;
       padding-top: 56.25%;
       background-color: black;
     }
+
     .video-container #videoPlayer {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       z-index: 1;
     }
+
     .overlay {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       background: transparent;
       z-index: 2;
-      pointer-events: auto;
+      pointer-events: none; /* Allow controls to work */
     }
+
+    .overlay .ad-zone {
+      pointer-events: auto;
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      width: 60%; height: 60%;
+      z-index: 3;
+      cursor: pointer;
+    }
+
     .controls {
       position: absolute;
       bottom: 10px;
-      left: 0;
-      right: 0;
+      left: 0; right: 0;
       display: flex;
       justify-content: center;
       gap: 10px;
-      z-index: 3;
+      z-index: 4;
       pointer-events: auto;
+      transition: opacity 0.5s ease;
     }
+
     .control-btn {
       background-color: rgba(0, 0, 0, 0.6);
       color: white;
@@ -60,6 +72,7 @@
       border-radius: 50%;
       cursor: pointer;
     }
+
     .theme-button {
       cursor: pointer;
       padding: 6px 12px;
@@ -68,17 +81,21 @@
       color: white;
       transition: all 0.3s ease;
     }
+
     .theme-button:hover {
       transform: scale(1.05);
       background-color: #4b5563;
     }
+
     #themeList {
       display: none;
     }
+
     .video-container.fullscreen {
       height: 100vh;
       width: 100vw;
     }
+
     .controls.fullscreen {
       position: fixed;
       bottom: 10px;
@@ -87,9 +104,15 @@
       width: 100%;
       z-index: 9999;
     }
+
+    .controls.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
   </style>
 </head>
 <body class="bg-[#0b0f1a] text-white">
+
 <div class="max-w-5xl mx-auto px-4 py-6">
   <header class="flex flex-col sm:flex-row sm:items-center justify-between mb-6">
     <h1 class="text-3xl font-bold text-purple-400">Wind Breaker - Season 1</h1>
@@ -121,8 +144,10 @@
 
   <div id="videoWrapper" class="video-container rounded-xl shadow-lg overflow-hidden relative">
     <div id="videoPlayer"></div>
-    <div class="overlay" onclick="window.open('https://sawutser.top/4/9278457', '_blank')"></div>
-    <div class="controls">
+    <div class="overlay">
+      <div class="ad-zone" onclick="window.open('https://sawutser.top/4/9278457', '_blank')"></div>
+    </div>
+    <div class="controls" id="videoControls">
       <button class="control-btn" onclick="seek(-15)">⏪ 15s</button>
       <button class="control-btn" onclick="togglePlayPause()">▶️ / ⏸️</button>
       <button class="control-btn" onclick="seek(15)">15s ⏩</button>
@@ -135,15 +160,14 @@
   <div class="mt-4 bg-gray-800 p-4 rounded-lg">
     <h2 class="text-xl font-semibold mb-1">About Wind Breaker</h2>
     <p>
-      Wind Breaker is a high-energy anime series that follows Haruka Sakura, a strong and rebellious transfer student who joins Furin High School—a school known for its fierce fighters who protect their town...
+      Wind Breaker is a high-energy anime series that follows Haruka Sakura, a strong and rebellious transfer student who joins Furin High School—a school known for its fierce fighters who protect their town.
     </p>
   </div>
 
   <div id="episodeList" class="mt-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"></div>
 
   <footer class="mt-10 text-sm text-center text-gray-400">
-    <p>A heartfelt thank you to the creators of <strong>Wind Breaker</strong>...</p>
-    <p class="mt-2">Thank you for everything!</p>
+    <p>Thanks to the creators of <strong>Wind Breaker</strong> for this amazing anime. Also, big thanks to <strong>Muse India</strong> for regional distribution.</p>
   </footer>
 </div>
 
@@ -165,6 +189,7 @@
     { title: "Episode 13", link: "-xUk9E2iQQY" }
   ];
   let currentEpisodeIndex = 0;
+  let hideTimeout;
 
   function onYouTubeIframeAPIReady() {
     player = new YT.Player('videoPlayer', {
@@ -191,7 +216,7 @@
 
   function toggleFullscreen() {
     const wrapper = document.getElementById("videoWrapper");
-    const controls = document.querySelector(".controls");
+    const controls = document.getElementById("videoControls");
     if (document.fullscreenElement) {
       document.exitFullscreen();
       wrapper.classList.remove("fullscreen");
@@ -218,7 +243,9 @@
   }
 
   function onPlayerStateChange(event) {
-    if (event.data === YT.PlayerState.ENDED) playNextEpisode();
+    if (event.data === YT.PlayerState.ENDED) {
+      playNextEpisode();
+    }
   }
 
   function toggleThemes() {
@@ -261,6 +288,18 @@
       list.appendChild(btn);
     });
   }
+
+  function showControls() {
+    const controls = document.getElementById("videoControls");
+    controls.classList.remove("hidden");
+    clearTimeout(hideTimeout);
+    hideTimeout = setTimeout(() => {
+      controls.classList.add("hidden");
+    }, 3000);
+  }
+
+  document.addEventListener("mousemove", showControls);
+  document.addEventListener("touchstart", showControls);
 
   (function applySavedTheme() {
     const saved = localStorage.getItem("theme");
