--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -2,309 +2,212 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wind Breaker Season 1</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://www.youtube.com/iframe_api"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Anime Player</title>
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      overflow-x: hidden;
+      font-family: sans-serif;
+      background: #111;
+      color: #fff;
     }
-
-    html, body {
-      user-select: none;
-      scroll-behavior: smooth;
-    }
-
-    .video-container {
+    #videoWrapper {
       position: relative;
-      padding-top: 56.25%;
-      background-color: black;
+      width: 100vw;
+      height: 56.25vw; /* 16:9 ratio */
+      max-height: 100vh;
+      overflow: hidden;
     }
-
-    .video-container #videoPlayer {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      z-index: 1;
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
     }
-
-    .overlay {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: transparent;
-      z-index: 2;
-      pointer-events: none; /* Allow controls to work */
-    }
-
-    .overlay .ad-zone {
-      pointer-events: auto;
-      position: absolute;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      width: 60%; height: 60%;
-      z-index: 3;
-      cursor: pointer;
-    }
-
     .controls {
       position: absolute;
       bottom: 10px;
-      left: 0; right: 0;
+      left: 0;
+      right: 0;
       display: flex;
       justify-content: center;
       gap: 10px;
-      z-index: 4;
+      opacity: 1;
+      transition: opacity 0.5s ease-in-out;
+      z-index: 10;
       pointer-events: auto;
-      transition: opacity 0.5s ease;
     }
-
-    .control-btn {
-      background-color: rgba(0, 0, 0, 0.6);
+    .controls.fullscreen {
+      bottom: 20px;
+    }
+    .controls button {
+      padding: 10px;
+      background: rgba(0,0,0,0.6);
+      border: none;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .episode-list {
+      padding: 10px;
+      overflow-y: auto;
+      max-height: 300px;
+    }
+    .episode-list button {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      margin: 5px 0;
+      background: #5b21b6;
       color: white;
       border: none;
-      padding: 10px;
-      border-radius: 50%;
-      cursor: pointer;
+      border-radius: 10px;
+      text-align: left;
     }
-
-    .theme-button {
-      cursor: pointer;
-      padding: 6px 12px;
-      border-radius: 6px;
-      background-color: #2d2d2d;
-      color: white;
-      transition: all 0.3s ease;
-    }
-
-    .theme-button:hover {
-      transform: scale(1.05);
-      background-color: #4b5563;
-    }
-
-    #themeList {
-      display: none;
-    }
-
-    .video-container.fullscreen {
-      height: 100vh;
-      width: 100vw;
-    }
-
-    .controls.fullscreen {
-      position: fixed;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 100%;
-      z-index: 9999;
-    }
-
-    .controls.hidden {
-      opacity: 0;
-      pointer-events: none;
+    @media (max-width: 600px) {
+      #videoWrapper {
+        height: 56.25vw;
+      }
+      .controls {
+        flex-wrap: wrap;
+      }
     }
   </style>
 </head>
-<body class="bg-[#0b0f1a] text-white">
-
-<div class="max-w-5xl mx-auto px-4 py-6">
-  <header class="flex flex-col sm:flex-row sm:items-center justify-between mb-6">
-    <h1 class="text-3xl font-bold text-purple-400">Wind Breaker - Season 1</h1>
-    <div class="flex gap-3 mt-2 sm:mt-0">
-      <a href="index.2.html" class="theme-button">← Go Back</a>
-      <a href="support.html" class="theme-button">Support Us</a>
-    </div>
-  </header>
-
-  <div class="mb-4">
-    <button onclick="toggleThemes()" class="theme-button">Choose Theme</button>
-    <div id="themeList" class="mt-2 grid grid-cols-2 sm:grid-cols-3 gap-2">
-      <button onclick="setTheme('bg-[#0b0f1a]')" class="theme-button">AniWatch Dark</button>
-      <button onclick="setTheme('bg-gray-900')" class="theme-button">Classic Dark</button>
-      <button onclick="setTheme('bg-gradient-to-r from-indigo-900 via-purple-900 to-gray-900')" class="theme-button">Indigo Wave</button>
-      <button onclick="setTheme('bg-gradient-to-r from-gray-800 to-black')" class="theme-button">Smoky</button>
-      <button onclick="setTheme('bg-gradient-to-r from-purple-800 via-pink-700 to-red-600')" class="theme-button">Neon Heat</button>
-      <button onclick="setTheme('bg-gradient-to-br from-black via-gray-800 to-black')" class="theme-button">Minimal Night</button>
-      <button onclick="setTheme('bg-gradient-to-r from-blue-900 to-indigo-800')" class="theme-button">Oceanic</button>
-      <button onclick="setTheme('bg-gradient-to-br from-yellow-800 via-red-800 to-pink-700')" class="theme-button">Twilight</button>
-      <button onclick="setTheme('bg-gradient-to-r from-black via-purple-800 to-black')" class="theme-button">Void Pulse</button>
-      <button onclick="setTheme('bg-gradient-to-br from-green-800 to-teal-900')" class="theme-button">Mystic Forest</button>
-      <button onclick="setTheme('bg-gradient-to-br from-zinc-900 to-neutral-800')" class="theme-button">Ash Fade</button>
-      <button onclick="setTheme('bg-gradient-to-br from-cyan-900 to-indigo-900')" class="theme-button">Cyber Chill</button>
-    </div>
-  </div>
-
-  <input type="text" id="searchBox" oninput="searchEpisodes()" placeholder="Search episodes..." class="w-full p-2 mb-4 bg-gray-800 text-white rounded" />
-
-  <div id="videoWrapper" class="video-container rounded-xl shadow-lg overflow-hidden relative">
+<body>
+  <div id="videoWrapper">
     <div id="videoPlayer"></div>
-    <div class="overlay">
-      <div class="ad-zone" onclick="window.open('https://sawutser.top/4/9278457', '_blank')"></div>
-    </div>
-    <div class="controls" id="videoControls">
-      <button class="control-btn" onclick="seek(-15)">⏪ 15s</button>
-      <button class="control-btn" onclick="togglePlayPause()">▶️ / ⏸️</button>
-      <button class="control-btn" onclick="seek(15)">15s ⏩</button>
-      <button class="control-btn" onclick="playPreviousEpisode()">⬅️ Prev</button>
-      <button class="control-btn" onclick="playNextEpisode()">Next ➡️</button>
-      <button class="control-btn" onclick="toggleFullscreen()">⛶</button>
+    <div class="controls">
+      <button onclick="seek(-10)">⏪ 10s</button>
+      <button onclick="togglePlayPause()">⏯</button>
+      <button onclick="seek(10)">10s ⏩</button>
+      <button onclick="playPreviousEpisode()">⬅️ Prev</button>
+      <button onclick="playNextEpisode()">Next ➡️</button>
+      <button onclick="toggleFullscreen()">⛶</button>
+      <button onclick="openOnYouTube()">🎬 YouTube</button>
     </div>
   </div>
 
-  <div class="mt-4 bg-gray-800 p-4 rounded-lg">
-    <h2 class="text-xl font-semibold mb-1">About Wind Breaker</h2>
-    <p>
-      Wind Breaker is a high-energy anime series that follows Haruka Sakura, a strong and rebellious transfer student who joins Furin High School—a school known for its fierce fighters who protect their town.
-    </p>
+  <div>
+    <input type="text" id="searchBox" placeholder="Search episodes..." oninput="searchEpisodes()" />
+    <div id="episodeList" class="episode-list"></div>
   </div>
 
-  <div id="episodeList" class="mt-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"></div>
+  <script src="https://www.youtube.com/iframe_api"></script>
+  <script>
+    let player;
+    const episodes = [
+      { title: "Episode 1", link: "ne0Y0vyjxpE" },
+      { title: "Episode 2", link: "J2568cnOa1g" },
+      { title: "Episode 3", link: "QOMv17IjJAU" },
+      { title: "Episode 4", link: "MT7WzTJZCxg" },
+      { title: "Episode 5", link: "4sRfndp1vAM" },
+      { title: "Episode 6", link: "oTvQ-5BNC6w" },
+      { title: "Episode 7", link: "Em5lFIz_kxU" },
+      { title: "Episode 8", link: "SBaGblvd4mU" },
+      { title: "Episode 9", link: "43Hj2GySjgA" },
+      { title: "Episode 10", link: "TIpodnZtFP4" },
+      { title: "Episode 11", link: "_L-UG_jvnM4" },
+      { title: "Episode 12", link: "skAwsc6UL8A" },
+      { title: "Episode 13", link: "-xUk9E2iQQY" }
+    ];
+    let currentEpisodeIndex = 0;
+    let controlTimeout;
 
-  <footer class="mt-10 text-sm text-center text-gray-400">
-    <p>Thanks to the creators of <strong>Wind Breaker</strong> for this amazing anime. Also, big thanks to <strong>Muse India</strong> for regional distribution.</p>
-  </footer>
-</div>
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('videoPlayer', {
+        videoId: episodes[currentEpisodeIndex].link,
+        playerVars: {
+          autoplay: 1,
+          controls: 1,
+          modestbranding: 1,
+          rel: 0,
+          cc_load_policy: 1
+        },
+        events: {
+          onReady: loadEpisodes,
+          onStateChange: onPlayerStateChange
+        }
+      });
+    }
 
-<script>
-  let player;
-  const episodes = [
-    { title: "Episode 1", link: "ne0Y0vyjxpE" },
-    { title: "Episode 2", link: "J2568cnOa1g" },
-    { title: "Episode 3", link: "QOMv17IjJAU" },
-    { title: "Episode 4", link: "MT7WzTJZCxg" },
-    { title: "Episode 5", link: "4sRfndp1vAM" },
-    { title: "Episode 6", link: "oTvQ-5BNC6w" },
-    { title: "Episode 7", link: "Em5lFIz_kxU" },
-    { title: "Episode 8", link: "SBaGblvd4mU" },
-    { title: "Episode 9", link: "43Hj2GySjgA" },
-    { title: "Episode 10", link: "TIpodnZtFP4" },
-    { title: "Episode 11", link: "_L-UG_jvnM4" },
-    { title: "Episode 12", link: "skAwsc6UL8A" },
-    { title: "Episode 13", link: "-xUk9E2iQQY" }
-  ];
-  let currentEpisodeIndex = 0;
-  let hideTimeout;
-
-  function onYouTubeIframeAPIReady() {
-    player = new YT.Player('videoPlayer', {
-      videoId: episodes[currentEpisodeIndex].link,
-      playerVars: { autoplay: 1, controls: 1, modestbranding: 1, rel: 0 },
-      events: {
-        onReady: loadEpisodes,
-        onStateChange: onPlayerStateChange
+    function seek(seconds) {
+      if (player && player.getCurrentTime) {
+        const currentTime = player.getCurrentTime();
+        player.seekTo(currentTime + seconds, true);
       }
-    });
-  }
-
-  function seek(seconds) {
-    if (player && player.getCurrentTime) {
-      player.seekTo(player.getCurrentTime() + seconds, true);
     }
-  }
 
-  function togglePlayPause() {
-    const state = player.getPlayerState();
-    if (state === YT.PlayerState.PLAYING) player.pauseVideo();
-    else player.playVideo();
-  }
-
-  function toggleFullscreen() {
-    const wrapper = document.getElementById("videoWrapper");
-    const controls = document.getElementById("videoControls");
-    if (document.fullscreenElement) {
-      document.exitFullscreen();
-      wrapper.classList.remove("fullscreen");
-      controls.classList.remove("fullscreen");
-    } else {
-      wrapper.requestFullscreen();
-      wrapper.classList.add("fullscreen");
-      controls.classList.add("fullscreen");
+    function togglePlayPause() {
+      const state = player.getPlayerState();
+      if (state === YT.PlayerState.PLAYING) player.pauseVideo();
+      else player.playVideo();
     }
-  }
 
-  function playNextEpisode() {
-    if (currentEpisodeIndex < episodes.length - 1) {
-      currentEpisodeIndex++;
-      player.loadVideoById(episodes[currentEpisodeIndex].link);
+    function toggleFullscreen() {
+      const wrapper = document.getElementById("videoWrapper");
+      if (document.fullscreenElement) document.exitFullscreen();
+      else wrapper.requestFullscreen();
     }
-  }
 
-  function playPreviousEpisode() {
-    if (currentEpisodeIndex > 0) {
-      currentEpisodeIndex--;
-      player.loadVideoById(episodes[currentEpisodeIndex].link);
+    function playNextEpisode() {
+      if (currentEpisodeIndex < episodes.length - 1) {
+        currentEpisodeIndex++;
+        player.loadVideoById(episodes[currentEpisodeIndex].link);
+      }
     }
-  }
 
-  function onPlayerStateChange(event) {
-    if (event.data === YT.PlayerState.ENDED) {
-      playNextEpisode();
+    function playPreviousEpisode() {
+      if (currentEpisodeIndex > 0) {
+        currentEpisodeIndex--;
+        player.loadVideoById(episodes[currentEpisodeIndex].link);
+      }
     }
-  }
 
-  function toggleThemes() {
-    const tList = document.getElementById("themeList");
-    tList.style.display = tList.style.display === "grid" ? "none" : "grid";
-  }
+    function onPlayerStateChange(event) {
+      if (event.data === YT.PlayerState.ENDED) playNextEpisode();
 
-  function setTheme(themeClass) {
-    localStorage.setItem("theme", themeClass);
-    document.body.className = themeClass + " text-white";
-  }
+      const controls = document.querySelector(".controls");
+      controls.style.opacity = "1";
+      clearTimeout(controlTimeout);
+      controlTimeout = setTimeout(() => {
+        controls.style.opacity = "0";
+      }, 4000);
+    }
 
-  function searchEpisodes() {
-    const value = document.getElementById("searchBox").value.toLowerCase();
-    const list = document.getElementById("episodeList");
-    list.innerHTML = "";
-    episodes.filter(ep => ep.title.toLowerCase().includes(value)).forEach((ep, i) => {
-      const btn = document.createElement("button");
-      btn.className = "p-3 bg-purple-700 hover:bg-purple-800 rounded-xl shadow-md text-left";
-      btn.innerHTML = `<strong>${ep.title}</strong>`;
-      btn.onclick = () => {
-        currentEpisodeIndex = i;
-        player.loadVideoById(ep.link);
-      };
-      list.appendChild(btn);
-    });
-  }
+    function openOnYouTube() {
+      const videoId = episodes[currentEpisodeIndex].link;
+      window.open(`https://www.youtube.com/watch?v=${videoId}`, "_blank");
+    }
 
-  function loadEpisodes() {
-    const list = document.getElementById("episodeList");
-    list.innerHTML = "";
-    episodes.forEach((ep, i) => {
-      const btn = document.createElement("button");
-      btn.className = "p-3 bg-purple-700 hover:bg-purple-800 rounded-xl shadow-md text-left";
-      btn.innerHTML = `<strong>${ep.title}</strong>`;
-      btn.onclick = () => {
-        currentEpisodeIndex = i;
-        player.loadVideoById(ep.link);
-      };
-      list.appendChild(btn);
-    });
-  }
+    function searchEpisodes() {
+      const value = document.getElementById("searchBox").value.toLowerCase();
+      const list = document.getElementById("episodeList");
+      list.innerHTML = "";
+      episodes.filter(ep => ep.title.toLowerCase().includes(value)).forEach((ep, i) => {
+        const btn = document.createElement("button");
+        btn.textContent = ep.title;
+        btn.onclick = () => {
+          currentEpisodeIndex = i;
+          player.loadVideoById(ep.link);
+        };
+        list.appendChild(btn);
+      });
+    }
 
-  function showControls() {
-    const controls = document.getElementById("videoControls");
-    controls.classList.remove("hidden");
-    clearTimeout(hideTimeout);
-    hideTimeout = setTimeout(() => {
-      controls.classList.add("hidden");
-    }, 3000);
-  }
-
-  document.addEventListener("mousemove", showControls);
-  document.addEventListener("touchstart", showControls);
-
-  (function applySavedTheme() {
-    const saved = localStorage.getItem("theme");
-    if (saved) document.body.className = saved + " text-white";
-  })();
-</script>
+    function loadEpisodes() {
+      const list = document.getElementById("episodeList");
+      list.innerHTML = "";
+      episodes.forEach((ep, i) => {
+        const btn = document.createElement("button");
+        btn.textContent = ep.title;
+        btn.onclick = () => {
+          currentEpisodeIndex = i;
+          player.loadVideoById(ep.link);
+        };
+        list.appendChild(btn);
+      });
+    }
+  </script>
 </body>
 </html>
